# liburpc

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README.md  config.h.cmake  synchronizer.c  synchronizer.h  uri.c  uri.h  urpc.c  urpc.h  urpc_export.h
devserial/: CMakeLists.txt  devserial.c  devserial.h  platform-posix.c  platform-win32.c  platform.h
devudp/: CMakeLists.txt  devudp.c  devudp.h  platform-posix.c  platform-win32.c  platform.c  platform.h  ring.c  ring.h
devxinet/: CMakeLists.txt  common.cpp  devxinet.cpp  devxinet.h  mapserialurpc.cpp  mapserialurpc.h  platform-posix.cpp  platform-win32.cpp  rw_lock.h  server.cpp
style/: config.txt
