CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

option(ENABLE_SUPERVISOR "Enable supervisor" ON)
if (WIN32)
  set(ENABLE_SUPERVISOR OFF CACHE INTERNAL "")
endif()

add_definitions( -DZF_LOG_LEVEL=ZF_LOG_DEBUG)

macro(use_cxx11)
  if (CMAKE_VERSION VERSION_LESS "3.1")
    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
    endif ()
  else ()
    set (CMAKE_CXX_STANDARD 11)
  endif ()
endmacro(use_cxx11)

use_cxx11()

FUNCTION(ADD_SUBDIRECTORY_BINDY)
    SET(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
    SET(BUILD_EXAMPLE OFF CACHE INTERNAL "")
	SET(USE_JOINT_ZFLOG_FROM_ROOT_PROJECT ON CACHE INTERNAL "")
    ADD_SUBDIRECTORY(vendor/bindy)
ENDFUNCTION()
ADD_SUBDIRECTORY_BINDY()
INCLUDE_DIRECTORIES(vendor)

PROJECT(urpc_xinet_server CXX)
IF(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF()
FUNCTION(ADD_SUBDIRECTORY_LIBURPC)
   ADD_SUBDIRECTORY(.. liburpc)
ENDFUNCTION()
ADD_SUBDIRECTORY_LIBURPC()
set(SOURCES 
    common.cpp
    server.cpp
    mapserialurpc.cpp)
if (ENABLE_SUPERVISOR)
    set(SOURCES ${SOURCES} supervisor.cpp)
endif()
if (WIN32)
    set(SOURCES ${SOURCES} platform-win32.cpp)
else()
    set(SOURCES ${SOURCES} platform-posix.cpp)
endif()
ADD_EXECUTABLE(urpc_xinet_server ${SOURCES})

if (NOT DEFINED LIBSERIALPORT_PATH)
         if(${CMAKE_SYSTEM_NAME} STREQUAL Darwin)
            set (XIBRIDGE_PATH "${CMAKE_SOURCE_DIR}/../libserialport_release/macos" CACHE INTERNAL "")
         elseif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
            if (CMAKE_SIZEOF_VOID_P EQUAL 8)
                # 64 bits
                set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../../libserialport_release/win64"  CACHE INTERNAL "")
            else()
                # 32 bits
                set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../../libserialport_release/win32" CACHE INTERNAL "")
            endif() 
         elseif (${CMAKE_SYSTEM_NAME} STREQUAL Debian-mipsel)  		
		        set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../../libserialport_release/deb_mips" CACHE INTERNAL "")
         else()
            set (LIBSERIALPORT_PATH "${CMAKE_SOURCE_DIR}/../../libserialport_release/deb64" CACHE INTERNAL "")
         endif()
     endif()
     find_path(LIBSERIALPORT_INCLUDE_DIR libserialport.h PATHS ${LIBSERIALPORT_PATH})
     find_library(LIBSERIALPORT_LIBRARY NAMES serialport PATHS  ${LIBSERIALPORT_PATH})
     include(FindPackageHandleStandardArgs)
     FIND_PACKAGE_HANDLE_STANDARD_ARGS(LIBSERIALPORT DEFAULT_MSG LIBSERIALPORT_INCLUDE_DIR LIBSERIALPORT_LIBRARY)
     mark_as_advanced(LIBSERIALPORT_INCLUDE_DIR LIBSERIALPORT_LIBRARY)
     if(NOT LIBSERIALPORT_FOUND)
         message(FATAL_ERROR "libserialport could not be found in LIBSERIALPORT_PATH")
     else ()
     include_directories(${LIBSERIALPORT_INCLUDE_DIR})
     target_link_libraries(urpc_xinet_server ${LIBSERIALPORT_LIBRARY})
endif()	 

TARGET_LINK_LIBRARIES(urpc_xinet_server zf_log urpc bindy)
